# simple_market

./: .env.dist  .flake8  README.md  alembic.ini  app.db  database.py  main.py  models.py  pyproject.toml  schemas.py  test_main.http
alembic/: env.py
alembic/versions/: 0d6be5fc027e_initial.py  146f8b0a23d2_extend_user_model.py  87391e2856d1_added_order_product_unique_constraint.py
routers/: __init__.py  orders.py  products.py  users.py
schemas/: __init__.py  orders.py  products.py  users.py
